[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/Menus/MainMenu/menu_background.png" type="Texture" id=1]
[ext_resource path="res://Assets/Interactables/robot_parts.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Interface/HUD/PlayerPartsHud.gd" type="Script" id=3]

[node name="PlayerPartsHud" type="MarginContainer"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -33.0
custom_constants/margin_right = 8
custom_constants/margin_top = 12
script = ExtResource( 3 )

[node name="VC" type="VBoxContainer" parent="."]
margin_top = 12.0
margin_right = 25.0
margin_bottom = 225.0

[node name="RapidFire" type="TextureRect" parent="VC"]
modulate = Color( 1, 1, 1, 0.768627 )
margin_right = 25.0
margin_bottom = 25.0
rect_min_size = Vector2( 25, 25 )
texture = ExtResource( 1 )
expand = true

[node name="Sprite" type="Sprite" parent="VC/RapidFire"]
position = Vector2( 13, 13 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 2, 4, 18, 13 )

[node name="MovementBoost" type="TextureRect" parent="VC"]
modulate = Color( 1, 1, 1, 0.768627 )
margin_top = 29.0
margin_right = 25.0
margin_bottom = 54.0
rect_min_size = Vector2( 25, 25 )
texture = ExtResource( 1 )
expand = true

[node name="Sprite" type="Sprite" parent="VC/MovementBoost"]
position = Vector2( 13, 13 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 29, 4, 9, 12 )

[node name="DefenseBoost" type="TextureRect" parent="VC"]
modulate = Color( 1, 1, 1, 0.768627 )
margin_top = 58.0
margin_right = 25.0
margin_bottom = 83.0
rect_min_size = Vector2( 25, 25 )
texture = ExtResource( 1 )
expand = true

[node name="Sprite" type="Sprite" parent="VC/DefenseBoost"]
position = Vector2( 13, 13 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 49, 3, 13, 14 )

[node name="HealthMaxBoost" type="TextureRect" parent="VC"]
modulate = Color( 1, 1, 1, 0.768627 )
margin_top = 87.0
margin_right = 25.0
margin_bottom = 112.0
rect_min_size = Vector2( 25, 25 )
texture = ExtResource( 1 )
expand = true

[node name="Sprite" type="Sprite" parent="VC/HealthMaxBoost"]
position = Vector2( 13, 13 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 69, 2, 17, 15 )
