extends MarginContainer

onready var rapid_fire := get_node("VC/RapidFire")
onready var move_boost := get_node("VC/MovementBoost")
onready var defense_boost := get_node("VC/DefenseBoost")
onready var health_max_boost := get_node("VC/HealthMaxBoost")


# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.


